Update images and terms
